custom color changer gets slot in the selector

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <option value="rgb(255,250,240)">Floral White</option>
         <option value="rgb(245,255,250)">Mint Cream</option>
         <option value="rgb(255,248,220)">Cornsilk</option>
+        <option value="" id="customColorOption">Custom Color</option>
       </select>
       <section>
         <input type="range" min="0" max="255" id="red" class="rgbSlider" />
