--- a/index.html
+++ b/index.html
@@ -15,17 +15,6 @@
       <nav></nav>
     </header>
     <section>
-      <select id="dayOverride" name="dayOverride">
-        <option value="1">Monday</option>
-        <option value="2">Tuesday</option>
-        <option value="3">Wednesday</option>
-        <option value="4">Thursday</option>
-        <option value="5">Friday</option>
-        <option value="6">Saturday</option>
-        <option value="0">Sunday</option>
-      </select>
-    </section>
-    <section>
       <p id="clock"></p>
     </section>
     <section><p id="greeting"></p></section>
@@ -46,11 +35,8 @@
       </section>
     </section>
     <main></main>
-    <footer>
-      <button onclick="sessionStorage.clear()">Clear storage</button>
-    </footer>
+    <footer></footer>
     <script src="./assets/js/main.js"></script>
     <script src="./assets/js/index.js"></script>
-    <script src="./assets/js/utils.js"></script>
   </body>
 </html>
