--- a/pages/rockpaperscissors.html
+++ b/pages/rockpaperscissors.html
@@ -15,6 +15,8 @@
       <h1>Casino</h1>
       <nav></nav>
     </header>
+    <main></main>
+    <footer></footer>
     <script src="../assets/js/main.js"></script>
     <!-- importera main.js (OBS ../ )-->
     <script src="../assets/js/ssp.js"></script>
