--- a/pages/rockpaperscissors.html
+++ b/pages/rockpaperscissors.html
@@ -6,20 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/css/main.css" />
     <!-- importera main-CSS-->
-    <link rel="stylesheet" href="../assets/css/ssp.css" />
+    <link rel="stylesheet" href="../assets/css/rockpaperscissors.css" />
     <!-- importera sidspecifik CSS vid behov -->
     <title>Rock Paper Scissors</title>
   </head>
-  <body>
-    <header>
-      <h1>Casino</h1>
-      <nav></nav>
-    </header>
-    <main></main>
+  <body data-path-prefix="../">
+    <div class="wrapper">
+      <div class="headerContainer">
+        <header>
+          <h1>Casino</h1>
+          <nav></nav>
+        </header>
+      </div>
+      <div id="clock" class="clock"></div>
+      <main></main>
+    </div>
     <footer></footer>
     <script src="../assets/js/main.js"></script>
     <!-- importera main.js (OBS ../ )-->
-    <script src="../assets/js/ssp.js"></script>
+    <script src="../assets/js/rockpaperscissors.js"></script>
     <!-- importera sidspecifik JS -->
   </body>
 </html>
